fix: add visibility control to input password

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -3,7 +3,7 @@
   --space-sm: 12px;
   --space-md: 16px;
   --space-lg: 24px;
-  --space-xl: 32px;
+  --space-xl: 40px;
 
   --bdrs-xs: 4px;
   --bdrs-sm: 8px;
