--- a/src/assets/reset.scss
+++ b/src/assets/reset.scss
@@ -2,6 +2,7 @@
 html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
+  margin: 0;
 }
 body {
   margin: 0;
